# starbucks-mugs

./: .claude-output.json  .claude-plan.json  .claude-resolution.json  .conflict-info.json  .dockerignore  .gitignore  .lighthouserc.json  .review-feedback.txt  Makefile  README.md  alembic.ini  app.js  app.test.js  docker-compose.yml  funding.md  go.mod  go.sum  index.html  mugs.json  netlify.toml  package-lock.json  package.json  pyproject.toml  react-index.html  requirements-dev.txt  requirements-test.txt  requirements.txt  starbucks-mugs.html  style.css  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
agent/: README.md  config.example.yaml  go.mod  go.sum
api/: pricing.test.ts  pricing.ts  vehicles.test.ts  vehicles.ts
cmd/agent/: main.go
cmd/server/: main.go
costa-vs-starbucks/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
costa-vs-starbucks/src/: App.tsx
coverage/: clover.xml  costEngine.ts.html  coverage-final.json  index.html
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.test.tsx  App.tsx  vite-env.d.ts
db/migrations/: 001_hosts.down.sql  001_hosts.sql  001_hosts.up.sql  002_alerts.down.sql  002_alerts.sql  002_alerts.up.sql  003_rules.down.sql  003_rules.sql  003_rules.up.sql  004_audit.down.sql  004_audit.sql  004_audit.up.sql  005_vehicles.down.sql  005_vehicles.sql  005_vehicles.up.sql  006_pricing_defaults.down.sql  006_pricing_defaults.sql  006_pricing_defaults.up.sql
deployments/: Dockerfile.server  docker-compose.yml  entrypoint.server.sh
deployments/certs/: README.md  generate_agent_cert.sh  generate_ca.sh
deployments/config/: config.example.yaml
deployments/launchd/: com.tripwire.agent.plist
deployments/scripts/: install-agent-linux.sh  install-agent-macos.sh
deployments/systemd/: tripwire-agent.env  tripwire-agent.service  tripwire.service
docker/: Dockerfile  entrypoint.sh
docs/: components.md  testing.md
fileguard/: __init__.py  celery_app.py  config.py  main.py
fileguard/core/: __init__.py  av_adapter.py  av_engine.py  clamav_adapter.py  disposition.py  document_extractor.py  pii_detector.py  pipeline.py  redaction.py  scan_context.py
fileguard/db/: __init__.py  session.py
fileguard/engines/: __init__.py  base.py  clamav.py
fileguard/models/: __init__.py  batch_job.py  compliance_report.py  quarantined_file.py  scan_event.py  tenant_config.py
fileguard/schemas/: __init__.py  compliance_report.py  quarantine.py  report.py  tenant.py
fileguard/services/: __init__.py  audit.py  compliance_report.py  quarantine.py  reports.py  siem.py  storage.py
fileguard/tests/: __init__.py  test_disposition.py  test_dlp_adapter.py  test_macie_adapter.py  test_pii_detector.py  test_pipeline.py  test_quarantine.py  test_scan_worker.py  test_siem.py
fileguard/workers/: __init__.py  scan_worker.py
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml  serviceaccount.yaml
internal/agent/: agent.go  agent_test.go  network_watcher.go  (+1 more)
markdowntopdf/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
proto/: alert.pb.go  alert.proto  alert_grpc.pb.go  generate.go
src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts  types.ts
tests/: conftest.py  test_smoke.py
what-s-the-temp/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+482 files in other folders)
